no-ticket: clean up pom + ignore test cases